<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="10dp"
    android:id="@+id/item_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:elevation="100dp">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/tv_nama_makanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/nama_makanan"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="0dp"/>

        <TextView
            android:id="@+id/ikon_pensil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:layout_marginEnd="24dp"
            android:drawableRight="@drawable/selector_icon"
            app:layout_constraintStart_toStartOf="@id/tv_nama_makanan"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints" />


        <TextView
            android:id="@+id/title_kalori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            style="@style/body"
            android:text="@string/title_kalori"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_nama_makanan" />

        <TextView
            android:id="@+id/edt_kalori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:text="@string/edt_kalori"
            style="@style/body"
            app:layout_constraintStart_toEndOf="@+id/title_kalori"
            app:layout_constraintTop_toBottomOf="@+id/tv_nama_makanan" />

        <TextView
            android:id="@+id/title_karbohidrat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:text="@string/title_karbohidrat"
            style="@style/body"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_kalori" />

        <TextView
            android:id="@+id/edt_karbohidrat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            style="@style/body"
            android:text="@string/edt_karbohidrat"
            app:layout_constraintStart_toEndOf="@+id/title_karbohidrat"
            app:layout_constraintTop_toBottomOf="@+id/edt_kalori" />

        <TextView
            android:id="@+id/title_lemak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="20dp"
            android:text="@string/title_lemak"
            style="@style/body"
            app:layout_constraintStart_toEndOf="@+id/edt_kalori"
            app:layout_constraintTop_toBottomOf="@id/tv_nama_makanan" />

        <TextView
            android:id="@+id/edt_lemak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="4dp"
            android:text="@string/edt_lemak"
            style="@style/body"
            app:layout_constraintTop_toBottomOf="@id/tv_nama_makanan"
            app:layout_constraintStart_toEndOf="@+id/title_lemak" />

        <TextView
            android:id="@+id/title_protein"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginTop="4dp"
            android:text="@string/title_protein"
            style="@style/body"
            app:layout_constraintTop_toBottomOf="@id/title_lemak"
            app:layout_constraintStart_toEndOf="@+id/edt_karbohidrat" />

        <TextView
            android:id="@+id/edt_protein"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="4dp"
            android:text="@string/edt_protein"
            style="@style/body"
            app:layout_constraintTop_toBottomOf="@id/edt_lemak"
            app:layout_constraintStart_toEndOf="@+id/title_protein" />











    </androidx.constraintlayout.widget.ConstraintLayout>



</com.google.android.material.card.MaterialCardView>