<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_welcome"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/onboarding_1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_title_intro"
        android:gravity="center"
        android:text="@string/title_welcome"
        style="@style/large_bold"
        android:textColor="@color/primaryText"
        android:layout_marginBottom="16dp"
        android:textSize="18sp"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_description_intro"
        android:gravity="center"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="24dp"
        style="@style/body"
        android:text="@string/description_welcome"
        android:textColor="@color/secondaryText"/>








</LinearLayout>