<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Register.UserPreferenceActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp">

        <TextView
            android:id="@+id/dataDiriTitle"
            style="@style/heading5_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_diri_title"
            android:textColor="@color/primaryText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dataPreferenceDescription"
            style="@style/large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/data_preference_description"
            android:textColor="@color/secondaryText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dataDiriTitle" />

        <TextView
            android:id="@+id/birthDateTitle"
            style="@style/large_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/birth_date_title"
            android:textColor="@color/primaryText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dataPreferenceDescription" />

        <EditText
            android:id="@+id/edt_birthDate"
            style="@style/body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:autofillHints="birthDate"
            android:clickable="true"
            android:drawableEnd="@drawable/ic_calendar"
            android:focusable="true"
            android:hint="@string/input_field"
            android:padding="14dp"
            android:textColor="@color/primaryText"
            app:layout_constraintBottom_toTopOf="@id/jenisKelaminTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/birthDateTitle"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/jenisKelaminTitle"
            style="@style/large_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/jenis_kelamin"
            android:textColor="@color/primaryText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_birthDate" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/beratTinggiTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/jenisKelaminTitle">

            <RadioButton
                android:id="@+id/rbMale"
                style="@style/body"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:padding="14dp"
                android:text="@string/laki_laki"
                android:textColor="@color/primaryText"
                android:theme="@style/RadioButtonStyle" />

            <RadioButton
                android:id="@+id/rbFemale"
                style="@style/body"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:padding="14dp"
                android:text="@string/perempuan"
                android:textColor="@color/primaryText"
                android:theme="@style/RadioButtonStyle" />
        </RadioGroup>

        <TextView
            android:id="@+id/beratTinggiTitle"
            style="@style/large_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/berat_badan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroup" />

        <TextView
            android:id="@+id/tinggiTitle"
            style="@style/large_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tinggi_badan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroup" />

        <EditText
            android:id="@+id/edt_weight"
            style="@style/body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/et_weight"
            android:padding="14dp"
            android:textAlignment="textStart"
            android:textColor="@color/secondaryText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/beratTinggiTitle" />

        <EditText
            android:id="@+id/edt_height"
            style="@style/body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/et_height"
            android:padding="14dp"
            android:textAlignment="textStart"
            android:textColor="@color/secondaryText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/beratTinggiTitle" />

        <TextView
            android:id="@+id/tv_activity"
            style="@style/large_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tv_activity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_weight" />

        <Spinner
            android:id="@+id/spinner_activity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/spinner_bg"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_activity" />

        <TextView
            android:id="@+id/tv_alergi"
            style="@style/large_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tv_allergies"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_activity" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkBox"
            style="@style/body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/seafood"
            android:textColor="@color/primaryText"
            android:theme="@style/colored_checkBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_alergi" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkBox2"
            style="@style/body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/telur"
            android:theme="@style/colored_checkBox"
            android:textColor="@color/primaryText"
            app:layout_constraintEnd_toStartOf="@+id/checkBox3"
            app:layout_constraintStart_toEndOf="@+id/checkBox"
            app:layout_constraintTop_toBottomOf="@+id/tv_alergi" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkBox3"
            style="@style/body"
            android:theme="@style/colored_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/lactose"
            android:textColor="@color/primaryText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_alergi" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_up"
            style="@style/heading6_bold"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/button"
            android:text="@string/btn_lanjut_preference"
            android:textColor="@color/white"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox2" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
