<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.intro.WelcomeActivity">

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/btn_sign_in"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/button"
        android:text="@string/btn_masuk"
        app:cornerRadius="8dp"
        android:textColor="@color/white"
        style="@style/heading6_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="70dp"
        />

    <TextView
        android:id="@+id/tv_onboarding"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_welcome"
        style="@style/body"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_in"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="12dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/button"
        app:cornerRadius="8dp"
        android:text="@string/btn_daftar"
        android:layout_marginBottom="12dp"
        android:textColor="@color/white"
        style="@style/heading6_bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_onboarding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/indicators_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_up"/>
    
    <androidx.viewpager2.widget.ViewPager2
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/introSliderViewPager"
        app:layout_constraintBottom_toTopOf="@+id/indicators_container"
        android:layout_marginBottom="24dp"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>